--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "stolz/laravel-schema-spy": "^0.1.0"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "classmap": [
