--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "font-awesome-sass": "^4.7.0"
+    "font-awesome-sass": "^4.7.0",
+    "moment": "^2.18.1"
   }
 }
